--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <div class="container" id="pdf-content">
     <div class="header">
-      <h2 style="margin: 0; font-size: 20px; color: #1f2937;">
-         <span id="tableTitle">...</span>
-      </h2>
-      
-      <span id="today-date"></span>
+      <div style="display: flex; align-items: center; gap: 12px; flex-wrap: wrap;">
+        <h2 style="margin: 0; font-size: 20px; color: #1f2937;" id="tableTitle">...</h2>
+        <span id="today-date" style="font-size: 14px; color: #374151;"></span>
+      </div>
+
     </div>
     <hr>
     <table id="only-table">
