--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </tr>
       </tfoot>
     </table>
-    <button onclick="addRow()">➕➕ </button>
+    <button onclick="addRow()">➕ </button>
     <button id="mainMenuButton">🏠เมนู</button>
 
 <!-- ซ่อนทุกปุ่มและ input ไว้ใน div นี้ -->
