--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 <!-- ซ่อนทุกปุ่มและ input ไว้ใน div นี้ -->
 <div id="menuPanel" style="display: none;">
   <div class="button-group">
-    <button onclick="showProfitSummary()">💰</button>
-    <button onclick="showSummary()">💸💸 </button>
-    <button onclick="showIndividualSummary()">👤👤 </button>
+    <button onclick="showProfitSummary()">เหลือจริง</button>
+    <button onclick="showSummary()">สรุปกับเจ้า</button>
+    <button onclick="showIndividualSummary()">ลูกค้า</button>
     <!-- <button onclick="downloadPDF()">📩 </button> -->
-    <button onclick="clearAllData()">🗑️ </button>
+    <!-- <button onclick="clearAllData()">🗑️ </button> -->
     <div style="margin-top: 10px;">
-      <button onclick="showDeleteRowPopup()">🗑️ ลบแถว</button>
+      <button onclick="showDeleteRowPopup()">🗑️ลบ</button>
     </div>
     
     <!-- เพิ่ม popup modal -->
@@ -94,8 +94,8 @@
     <div class="table-controls">
       <input type="text" id="newTableName" placeholder="ชื่อ" style="width: 70px;">
       <select id="tableSelector" style="width: 120px; height: 27px;"></select>
-      <button onclick="createNewTable()">🔎++</button>
-      <button onclick="deleteCurrentTable()">🗑️++ </button>
+      <button onclick="createNewTable()">+เพิ่ม</button>
+      <button onclick="deleteCurrentTable()">🗑️ลบ </button>
     </div>
   </div>
 
