--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 <!-- ซ่อนทุกปุ่มและ input ไว้ใน div นี้ -->
 <div id="menuPanel" style="display: none;">
   <div class="button-group">
-    <button onclick="showProfitSummary()">เหลือจริง</button>
-    <button onclick="showSummary()">สรุปกับเจ้า</button>
-    <button onclick="showIndividualSummary()">ลูกค้า</button>
+    <button onclick="showProfitSummary()">💸</button>
+    <button onclick="showSummary()">🤦‍♂️</button>
+    <button onclick="showIndividualSummary()">👫👫</button>
     <!-- <button onclick="downloadPDF()">📩 </button> -->
     <!-- <button onclick="clearAllData()">🗑️ </button> -->
     <div style="margin-top: 10px;">
-      <button onclick="showDeleteRowPopup()">🗑️ลบ</button>
+      <button onclick="showDeleteRowPopup()">🗑️</button>
     </div>
     
     <!-- เพิ่ม popup modal -->
@@ -92,10 +92,10 @@
   </div>
     <hr>
     <div class="table-controls">
-      <input type="text" id="newTableName" placeholder="ชื่อ" style="width: 70px;">
+      <!-- <input type="text" id="newTableName" placeholder="ชื่อ" style="width: 70px;"> -->
       <select id="tableSelector" style="width: 120px; height: 27px;"></select>
-      <button onclick="createNewTable()">+เพิ่ม</button>
-      <button onclick="deleteCurrentTable()">🗑️ลบ </button>
+      <!-- <button onclick="createNewTable()">➕</button>
+      <button onclick="deleteCurrentTable()">🚮</button> -->
     </div>
   </div>
 
