--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+  
 
   <div class="container" id="pdf-content">
+    <select id="tableSelector" style="width: 120px; height: 27px;"></select>
     <div class="header">
       <div style="display: flex; align-items: center; gap: 12px; flex-wrap: wrap;">
         <h2 style="margin: 0; font-size: 20px; color: #1f2937;" id="tableTitle">...</h2>
@@ -93,7 +95,7 @@
     <hr>
     <div class="table-controls">
       <!-- <input type="text" id="newTableName" placeholder="ชื่อ" style="width: 70px;"> -->
-      <select id="tableSelector" style="width: 120px; height: 27px;"></select>
+      <!-- <select id="tableSelector" style="width: 120px; height: 27px;"></select> -->
       <!-- <button onclick="createNewTable()">➕</button>
       <button onclick="deleteCurrentTable()">🚮</button> -->
     </div>
